# SULI-Program-

./: Data Set to Excel File  README.md  README.txt  conversions.cpp  conversions.h  converter_main.cpp  crystal6_parser.py  g6_retriever.py  ncdistmatmod.cpp  ncdistmatmod.h  readme.txt  to_primitive.py
dc7unsrt_c++_conversions/: CMakeLists.txt  readme.txt
pyton_version/: Data Set to Excel File (General)  README.md  g6_retriever.py
